添加测试接口,修改部分调用方法